--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -3,18 +3,14 @@ server.port=8080
 server.servlet.context-path=/api
 
 # Database Configuration
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/dscatalog
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-# H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 
 # Redis Configuration
 spring.cache.type=redis
@@ -27,7 +23,7 @@ spring.security.user.password=admin
 spring.security.user.roles=ADMIN
 
 # JWT Configuration
-jwt.secret=your-secret-key
+jwt.secret=mySecretKey
 jwt.expiration=86400000
 
 # Actuator Configuration
@@ -42,6 +38,7 @@ logging.level.root=INFO
 logging.level.com.chipset.dscatalog=DEBUG
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.file.name=logs/dscatalog.log
 
 # Swagger Configuration
 springfox.documentation.swagger-ui.enabled=true
@@ -64,7 +61,7 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 
 # CORS Configuration
-spring.mvc.cors.allowed-origins=*
+spring.mvc.cors.allowed-origins=http://localhost:3000
 spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.mvc.cors.allowed-headers=*
-spring.mvc.cors.allow-credentials=true
+spring.mvc.cors.allow-credentials=true 
