--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -3,31 +3,27 @@ server.port=8080
 server.servlet.context-path=/api
 
 # Database Configuration
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
 # Redis Configuration
 spring.cache.type=redis
-spring.redis.host=localhost
+spring.redis.host=${SPRING_REDIS_HOST}
 spring.redis.port=6379
 
 # Security Configuration
-spring.security.user.name=admin
-spring.security.user.password=admin
-spring.security.user.roles=ADMIN
+spring.security.user.name=${SPRING_SECURITY_USER_NAME}
+spring.security.user.password=${SPRING_SECURITY_USER_PASSWORD}
+spring.security.user.roles=${SPRING_SECURITY_USER_ROLES}
 
 # JWT Configuration
-jwt.secret=your-secret-key
+jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
 
 # Actuator Configuration
@@ -39,9 +35,10 @@ management.metrics.export.prometheus.enabled=true
 
 # Logging Configuration
 logging.level.root=INFO
-logging.level.com.chipset.dscatalog=DEBUG
+logging.level.com.chipset.dscatalog=INFO
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.file.name=logs/dscatalog.log
 
 # Swagger Configuration
 springfox.documentation.swagger-ui.enabled=true
@@ -64,7 +61,7 @@ spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 
 # CORS Configuration
-spring.mvc.cors.allowed-origins=*
+spring.mvc.cors.allowed-origins=${CORS_ALLOWED_ORIGINS}
 spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.mvc.cors.allowed-headers=*
-spring.mvc.cors.allow-credentials=true
+spring.mvc.cors.allow-credentials=true 
